# db-elt

./: .env.example  .gitignore  README.md  db.Dockerfile  docker-compose.yml  init-postgres.sh  pyproject.toml
analysis/: stats_dataset.py
elt/1_extract/: downloader.py  plu.py
elt/2_load/: commune_info.py  db.py  plu.py
elt/2_load/queries/: commune_info.sql  plu.sql
elt/3_transform/: db.py
elt/3_transform/queries/1_init/: building_in_parcelle.sql  building_mat.sql  forest_in_parcelle.sql  optimization.sql  plu_in_parcelle.sql  river_in_parcelle.sql
elt/3_transform/queries/2_fill/: 1_altitude.sql  1_building_etat.sql  1_building_in_parcelle.sql  1_building_type.sql  1_forest_essence.sql  1_forest_in_parcelle.sql  1_plu_in_parcelle.sql  1_plu_type.sql  1_river_in_parcelle.sql  2_enhanced_parcelle.sql
elt/3_transform/queries/3_clean/: clean.sql
